# Crapssim-control

./: .gitignore  AUDIT_P15_C2d.md  HEALTH_REPORT_P15.md  NOVA_AGENT_ENTRYPOINT.yaml  README.md  SPEC.md  VERSION  engine_adapter.py  phase16_compliance_report.txt  pyproject.toml  quick_start.md  run_demo.py  setup.cfg  telemetry.py  tracker.py
.github/: PULL_REQUEST_TEMPLATE.md
baselines/: .keep
crapssim_control/: __init__.py  __main__.py  actions.py  aggregator.py  batch_runner.py  bet_attrib.py  bet_event.py  bet_ledger.py  bet_types.py  capabilities.py  cli.py  cli_batch.py  cli_flags.py  cli_parse_dsl.py  cli_sweep.py  comparator.py  config.py  controller.py  csv_journal.py  csv_summary.py  deprecations.py  dsl_eval.py  dsl_helpers.py  dsl_parser.py  engine_adapter.py  eval.py  events.py  events_std.py  exports.py  flags.py  guardrails.py  hot_table.py  http_api.py  http_app.py  journal.py  legalize.py  legalize_legacy.py  legalize_rt.py  logging_utils.py  manifest.py  (+34 more)
csc/: __init__.py  __main__.py  aggregator.py  batch_runner.py  cli_sweep.py  comparator.py  report_hook.py  reporting.py
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSC_BIBLE.md  CSC_SNAPSHOT.yaml  CSC_v3_Master_History.md  DEV_WORKFLOW.md  ENGINE_API_ADAPTER.md  PHASE_CHECKLIST.md  POLICY.md  README.md  ROADMAP.md  SECURITY.md  SPEC(old).md  USAGE_HAPPY_PATH.md  actions_catalog.md  cli_reference.md  command_tape.md  csv.md  decision_journal.md  dsl_templates.md  engine_contract.md  evo_integration.md  external_commands.md  integrations_webhook.md  quick_start.md  report_schema.md  rules.md  rules_authoring.md  rules_engine_schema.md  run_manifest_schema.md  spec.md
examples/: README.md  baseline_sweep.yaml  demo_rules.dsl  example_ats.json  example_field_hardway.json  example_line_odds.json  example_props.json  martingale.json  martingale.yaml  martingale_pass.json  quickstart_spec.json  regression.json  regression_6_8.json  risk_policy_spec.json  sweep_explicit.yaml  sweep_grid.yaml
fastapi/: __init__.py  responses.py  templating.py  testclient.py
scripts/: capture_baseline_p0c3.sh  capture_baseline_p4.sh  phase6_baseline_live.py  phase6_baseline_replay.py  phase6_baseline_utils.py  release_check.py  run_perf_report.py  run_phase12_baseline.py  validate_spec.py  verify_baseline_p0c3.py
specs/: martingale_pass.spec.json  regression_three_rolls.spec.json
templates/: core_macros.yaml
tests/: __init__.py  _snapshot_helpers.py  conftest.py  test_action_mapping_v1.py  test_actions_catalog.py  test_actions_envelope.py  test_actions_p4c3.py  test_adapter_backcompat.py  test_adapter_determinism.py  test_adapter_flags.py  test_analytics_bankroll_rolls.py  test_analytics_hooks_scaffold.py  test_api_v1.py  test_bet_attrib.py  (+193 more)
(+169 files in other folders)
