[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crapssim-control"
version = "0.1.0"
description = "Control strategy layer for CrapsSim."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "crapssim>=0.3.1",
]

[tool.setuptools]
# If you later add a MANIFEST.in, setuptools will respect it.

[tool.setuptools.packages.find]
include = ["crapssim_control*"]
exclude = ["tests*", "specs*"]

[tool.setuptools.package-data]
# If you ship data inside the package folder, list it here.
crapssim_control = ["**/*.yml", "**/*.yaml", "**/*.json", "**/*.md"]

[project.scripts]
crapssim-ctl = "crapssim_control.cli:main"