[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crapssim-control"
version = "0.19.0"
description = "Control strategy layer for CrapsSim: runtime templates, rules (MVP), controller, and CSV journaling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CrapsSim Control Team" }]
dependencies = [
  "crapssim>=0.3.1",
  "PyYAML>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "httpx>=0.27",
]

# Optional extras: YAML loading for specs
[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]

[project.scripts]
crapssim-ctl = "crapssim_control.cli:main"

[tool.setuptools]
# If you later add a MANIFEST.in, setuptools will respect it.

[tool.setuptools.packages.find]
include = ["crapssim_control*"]
exclude = ["tests*", "specs*"]

[tool.setuptools.package-data]
# Ship schema/docs/spec examples inside the package (read-only)
crapssim_control = [
  "**/*.yml", "**/*.yaml", "**/*.json", "**/*.md",
]