[metadata]
name = crapssim-control
version = 0.1.0
description = Control strategy layer for CrapsSim
license = MIT

[options]
packages = find:
install_requires =
    crapssim>=0.3.1
python_requires = >=3.11
include_package_data = True

[options.packages.find]
include = crapssim_control*
exclude =
    tests*
    specs*

[options.package_data]
crapssim_control =
    **/*.yml
    **/*.yaml
    **/*.json
    **/*.md